<resources>
    <string name="app_name">TheMovieDb</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_app">About App</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="by_Ajay_Kumar_Maheshwari">A movie database</string>

    <string name="developername">Ajay Kumar Maheshwari</string>
    <string name="check_network_connection">Unable to connect to TheMovieDb, Please check your network connection.</string>
    <string name="action_filter">Filter</string>
    <string name="select_year_range">Select the year range : </string>
    <string name="starting">Starting : </string>
    <string name="ending">Ending : </string>
    <string name="to">TO</string>
    <string name="from">FROM</string>
    <string name="close">CLOSE</string>
    <string name="done">Apply</string>
    <string name="reset">Reset</string>
    <string name="no_result_found"><![CDATA[<  There is  no result to show >]]></string>
    <string name="unknown"><![CDATA[<unknown>]]></string>
    <string name="place_holder_dash">- -</string>
    <string name="no_movie_detail">Movie Detail not Available</string>
    <string name="thumb_transition_name">thumbImage</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="developer">About Developer</string>
    <string name="github">Projects</string>
    <string name="setting">Setting</string>
    <string name="blog">Blog</string>
    <string name="oops">Ooops!</string>
    <string name="slow_internet">Slow or no internet connection \n Check you internet setting.</string>
    <string name="try_again">try again</string>
    <string name="basic_info">Basic Info</string>
    <string name="lang">Languages :</string>
    <string name="backdropimage">backdropImage</string>
    <string name="genres">Genres :</string>
    <string name="overview">Overview :</string>
    <string name="director">Director :</string>
    <string name="country">Countries :</string>
    <string name="writer">Writers :</string>
    <string name="casts">Team Casts :</string>
    <string name="reviews">Reviews :</string>
    <string name="votes">Votes Average:</string>
    <string name="recommendations">Recommendations :</string>
    <string name="videos">Videos :</string>
    <string name="nodata">Currently, this movie data not presnt in database. Sorry for inconvenience.</string>
    <string name="goback">Go Back</string>
    <string name="year">Year</string>
    <string name="sortBy">Sorting</string>
    <string name="sharemovie">I belive you will like this movie. check this link </string>
    <string name="share">Share</string>
    <string name="nooverview">We don\'t have an overview translated in English. Help us expand our database by adding one.</string>
    <string name="errorsymbol">errorsymbol</string>
    <string name="nodatafound">404</string>
    <string name="datanotpresent">Currently,  searched query result not present in our database. Help us expand our database by adding one or you can search any other value.</string>
    <string name="aboutdeveloper">Motto: “Tinker with technology and make some thing new”</string>
    <string name="aboutmes">Motto: Tinker with technology and make some thing new.\n  \n I am an Open Source enthusiast and love playing with codes. I am Linux Foundation Certified Engineer.</string>
    <string name="post">Software Engineer</string>
    <string name="checkprofile">LinkedIn Profile</string>
    <string name="nExperience">3.5 Years \n Experience</string>
    <string name="nProjects">17+ Projects \n Live</string>
    <string name="revenue">Revenue :</string>
    <string name="dollars">$</string>
    <string name="grossvalue">Gross Value</string>
    <string name="ten">/10</string>
    <string name="overviewplot">Overview(Plot)</string>
    <string name="aboutAPPString"><![CDATA[<p>The MVP sample app with Dagger2 that shows list of movies and their details from<strong>&nbsp; TheMovieDb API</strong> : <a href=\\\"https://www.themoviedb.org\\\">https://www.themoviedb.org</a></p><p><em>#MVP, #Dagger2, #RxJava2, #Retrofit2, #AndroidInstrumentedUnitTesting</em></p><p>By:&nbsp; <strong>Ajay Kumar Maheshwari</strong></p>]]></string>
    <string name="errorNoAPP">No application can handle this request. Please install a web browser or check your URL.</string>
</resources>
