<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_icon"
        android:padding="25dp"
        android:elevation="5dp"
        android:contentDescription="@string/errorsymbol"
        android:src="@drawable/ic_egg_break"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tvOops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivSymbol"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:text="@string/oops"
        tools:text="Ooops!" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOops"
        android:fontFamily="@font/quicksand_light"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:layout_marginTop="10dp"
        android:paddingRight="50dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        android:text="@string/slow_internet"
        tools:text="Slow or no internet connection Check you internet setting" />

    <Button
        android:id="@+id/btn_tryagain"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/tvMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_round"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/try_again"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_smaller" />


</RelativeLayout>