<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlError"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="gone">


    <ImageView
        android:id="@+id/ivSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_icon"
        android:elevation="5dp"
        android:contentDescription="@string/errorsymbol"
        android:padding="25dp"
        android:src="@drawable/ic_egg_break"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tvOops"
        tools:text="Ooops!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivSymbol"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/oops"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMessage"
        tools:text="@string/nodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOops"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/quicksand_light"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:text="@string/nodata"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/text_small"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/tvMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_round"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/goback"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_smaller" />
</RelativeLayout>