<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_below="@+id/appBar"
    android:background="@drawable/bg_filter"
    android:clickable="true"

    android:elevation="10dp"
    android:visibility="visible">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="@dimen/d_smallest"
            android:layout_marginLeft="@dimen/d_smallest"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/d_smallest"
            android:weightSum="4"
            android:paddingTop="@dimen/d_smallest">

            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_smallest"
                android:fontFamily="@font/montserrat"
                android:text="@string/year"
                android:layout_weight=".7"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />

            <NumberPicker
                android:id="@+id/numberPicker1"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/tvSort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_small"
                android:fontFamily="@font/montserrat"
                android:text="@string/sortBy"
                android:layout_weight=".7"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal" />
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:padding="5dp"
                android:layout_weight="1.6"
                android:background="@drawable/spinner_border"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"

                    android:layout_toLeftOf="@+id/ivsort"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:id="@+id/ivsort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_sort" />

            </RelativeLayout>
            <!--<Spinner-->
                <!--android:id="@+id/spinner"-->
                <!--android:layout_width="149dp"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_margin="@dimen/d_small"-->
                <!--/>-->

        </LinearLayout>

        <View
            android:id="@+id/centerShim"
            android:layout_width="5dp"
            android:layout_height="0dp"
            android:layout_below="@+id/llview"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/llview"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/centerShim"
            android:background="@drawable/bg_btn_round"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/reset"
            android:textColor="@color/white" />

        <!--Same deal, but on the right -->
        <Button

            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/llview"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/centerShim"
            android:background="@drawable/bg_btn_round"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/done"
            android:textColor="@color/white" />

    </RelativeLayout>
</android.support.v7.widget.CardView>